Remove quotes from .env file

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 MYAPP_NAME=agile
 MYAPP_VERSION=0.1.0
-SITE_NAME="Agile!"
+SITE_NAME=Agile!
 DOMAIN=example.com
-SECRET_KEY="d&ty3@9xz+ixywcp8*&#23%n^-^ttj&z-=5p7=$!z4se&0ijk@"
-FONTAWESOME_SITE_ICON="fas fa-tasks"
-GITHUB_REPO_NAME="Agile"
-GITHUB_REPO_URL="https://github.com/jlebunetel/agile"
-GITHUB_TEAM_NAME="Julien Lebunetel"
-GITHUB_TEAM_URL="https://github.com/jlebunetel"
-GITHUB_CONTRIB_URL="https://github.com/jlebunetel/agile/graphs/contributors"
-LICENSE_NAME="MIT"
-LICENSE_URL="https://github.com/jlebunetel/agile/blob/main/LICENSE"
+SECRET_KEY=d&ty3@9xz+ixywcp8*&#23%n^-^ttj&z-=5p7=$!z4se&0ijk@
+FONTAWESOME_SITE_ICON=fas fa-tasks
+GITHUB_REPO_NAME=Agile
+GITHUB_REPO_URL=https://github.com/jlebunetel/agile
+GITHUB_TEAM_NAME=Julien Lebunetel
+GITHUB_TEAM_URL=https://github.com/jlebunetel
+GITHUB_CONTRIB_URL=https://github.com/jlebunetel/agile/graphs/contributors
+LICENSE_NAME=MIT
+LICENSE_URL=https://github.com/jlebunetel/agile/blob/main/LICENSE
 
 PYTHON_VERSION=3.9
 CORE_PORT=8000
