Update requirements for projects app

--- a/core/requirements.in
+++ b/core/requirements.in
@@ -24,11 +24,17 @@ django-celery-results
 # Forms
 django-widget-tweaks
 
+# Models
+django-ordered-model
+
 # Gunicorn
 gunicorn
 
 # Front-end
 django-webpack-loader==0.7.0
+
+# Markdown
+markdown
 
 # Dev tools
 black
